--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 :root {
-    --color-1: #1DB954;
-    --color-2: #323232;
+    --color-1: #ECEEEE;
+    --color-2: #F9FBFB;
     --color-3: #000000;
     --color-4: #FFFFFF;
-    --color-5: #181818;
+    --color-5: #52B7FF;
     --font-size-1: 1rem;
     --font-size-2: 1.2rem;
     --font-size-3: 1.8rem;
