Cases card element created and showed up on cases page

--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -1,6 +1,5 @@
 <app-header-user></app-header-user>
 <app-side-bar></app-side-bar>
-<div>
-    <p>home-page works!</p>
+<div class="home">
     <router-outlet name="child"></router-outlet>
 </div>
