--- a/src/app/shared/components/header-user/header-user.component.html
+++ b/src/app/shared/components/header-user/header-user.component.html
@@ -1,1 +1,5 @@
-<p>header-user works!</p>
+<div class="header-user-root">
+    <div class="header-user">
+        <p>header-user works!</p>
+    </div>
+</div>
