--- a/src/app/modules/cases/pages/cases-page/cases-page.component.html
+++ b/src/app/modules/cases/pages/cases-page/cases-page.component.html
@@ -1,1 +1,3 @@
-<p>cases-page works!</p>
+<div class="cases-page">
+    <app-case-card [case]="case" *ngFor="let case of cases"></app-case-card>
+</div>
