--- a/src/app/shared/components/header-user/header-user.component.html
+++ b/src/app/shared/components/header-user/header-user.component.html
@@ -1,5 +1,8 @@
 <div class="header-user-root">
     <div class="header-user">
-        <p>header-user works!</p>
+        <app-search></app-search>
+        <app-filter></app-filter>
+        <app-view></app-view>
+        <app-user></app-user>
     </div>
 </div>
