--- a/src/app/shared/components/header-user/header-user.component.html
+++ b/src/app/shared/components/header-user/header-user.component.html
@@ -1,8 +1,10 @@
 <div class="header-user-root">
     <div class="header-user">
-        <app-search></app-search>
-        <app-filter></app-filter>
-        <app-view></app-view>
-        <app-user></app-user>
+        <div class="left-elements">
+            <app-search></app-search>
+            <app-filter class="center-elements"></app-filter>
+            <app-view class="center-elements" ></app-view>
+        </div>
+        <app-user class="center-elements"></app-user>
     </div>
 </div>
