--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -3,9 +3,9 @@
         <p class="side-bar__tittle">Dashboard</p>
         <ul class="side-bar__list">
             <li [routerLink]="item.router" *ngFor="let item of mainMenu">
-                <div class="list-wrapper-item">
+                <div class="list-wrapper-item" (click)="setModule(item.name)">
                     <i [ngClass]="item.icon"></i>
-                    <span class="side-bar__list list-label"> {{item.name}}</span>
+                    <span class="side-bar__list list-label" [ngClass]="{'bold':currentRouter === item.name}"> {{item.name}}</span>
                 </div>
             </li>
         </ul>
