--- a/src/app/shared/components/case-card/case-card.component.css
+++ b/src/app/shared/components/case-card/case-card.component.css
@@ -1,21 +1,6 @@
 .uil:hover{
   cursor: pointer;
 }
-.dropdown{
-  position: relative;
-}
-.dropdown-content{
-  display: none;
-  position: absolute;
-  background-color: var(--color-1);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  border-radius: 6px;
-}
-.visible{
-  display: block;
-}
 .case-card {
   width: var(--case-card-width);
   height: var(--case-card-height);
@@ -36,6 +21,10 @@
   padding: 0.5rem 1rem 0.5rem 0;
   display: flex;
   justify-content: space-between;
+}
+
+.header:hover{
+  cursor: pointer;
 }
 
 .options > ul {
@@ -73,6 +62,20 @@ textarea{
 }
 textarea::-webkit-scrollbar{
   display: none;
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: var(--color-1);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 6px;
+ 
+}
+.visible{
+  display: block;
 }
 .nav-menu{
   padding: 0.2rem;
