--- a/src/app/shared/components/case-card/case-card.component.html
+++ b/src/app/shared/components/case-card/case-card.component.html
@@ -4,13 +4,14 @@
       <ul>
         <li>
           <i (click)="showMenu()" class="uil uil-angle-down"></i>
-          <div class="dropdown-content" [ngClass]="{'':visible === false,'visible':visible === true}">
+          <app-case-card-options></app-case-card-options>
+          <!-- <div class="dropdown-content" [ngClass]="{'':visible === false,'visible':visible === true}">
             <ul class="nav-menu">
               <li>WebEx Notes</li>
               <li>Trace Analysis</li>
               <li (click)="showMenu()">Close</li>
             </ul>
-          </div>
+          </div> -->
         </li>
         <li><i class="uil uil-archive"></i></li>
         <li><i class="uil uil-trash-alt"></i></li>
