--- a/src/app/shared/components/modals/webex-notes-modal/webex-notes-modal.component.html
+++ b/src/app/shared/components/modals/webex-notes-modal/webex-notes-modal.component.html
@@ -1,1 +1,12 @@
-<p>webex-notes-modal works!</p>
+<div>
+    <div class="title">
+        <p>Titulo Aqui</p>
+    </div>
+    <div class="summary">
+        <p>summary</p>
+    </div>
+    <div class="tittle-action">
+        <p>tittle action</p>
+    </div>
+    <button mat-raised-button>Basic</button>
+</div>
