--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,3 +1,6 @@
-<div class="search-component">
-    <input [(ngModel)]="searchValue" type="text" placeholder="Search...">
-</div>
+<form class="example-form">
+    <mat-form-field subscriptSizing="dynamic" class="example-full-width">
+      <mat-label>Search...</mat-label>
+      <input matInput placeholder="Ex. Routing Issue" value="">
+    </mat-form-field>
+</form>
