--- a/src/app/shared/components/view/view.component.html
+++ b/src/app/shared/components/view/view.component.html
@@ -1,11 +1,11 @@
 <mat-button-toggle-group #group="matButtonToggleGroup" value="right">
     <mat-button-toggle value="left">
-        <i class="uil uil-list-ol"></i>
+        <mat-icon>view_stream</mat-icon>
     </mat-button-toggle>
     <mat-button-toggle value="center">
-        <i class="uil uil-apps"></i>
+        <mat-icon>grid_view</mat-icon>
     </mat-button-toggle>
     <mat-button-toggle value="right">
-        <i class="uil uil-dialpad"></i>
+        <mat-icon>view_module</mat-icon>
     </mat-button-toggle>
   </mat-button-toggle-group>
