Adding new case and new notes

--- a/src/app/modules/home/components/header/header-user/header-user.component.html
+++ b/src/app/modules/home/components/header/header-user/header-user.component.html
@@ -4,6 +4,8 @@
             <app-search></app-search>
             <app-filter class="center-elements"></app-filter>
             <app-view class="center-elements" ></app-view>
+            <app-add-new-case></app-add-new-case>
+            <app-add-new-webex-notes></app-add-new-webex-notes>
         </div>
         <app-user class="center-elements"></app-user>
     </div>
