--- a/src/app/shared/components/modals/webex-notes-modal/webex-notes-modal.component.html
+++ b/src/app/shared/components/modals/webex-notes-modal/webex-notes-modal.component.html
@@ -7,7 +7,7 @@
     
       <mat-form-field class="example-full-width">
         <mat-label>Action</mat-label>
-        <textarea matInput type="text" value="action" name="action" (ngModelChange)="callSearch($event)" [(ngModel)]="action" (keydown.enter)="addAction($event)" placeholder="Customer removed phones-pt from CSS"></textarea>
+        <textarea matInput type="text" value="action" name="action" [(ngModel)]="action" (keydown.enter)="addAction($event)" placeholder="Customer removed phones-pt from CSS"></textarea>
       </mat-form-field>
     
       </form>
