Login and Logout working

--- a/src/app/modules/home/components/header/user/user.component.html
+++ b/src/app/modules/home/components/header/user/user.component.html
@@ -15,7 +15,7 @@
             <mat-icon>help_alt</mat-icon>
             <span>Help</span>
         </button>
-        <button mat-menu-item>
+        <button (click)="logout()" mat-menu-item>
             <mat-icon>logout</mat-icon>
             <span>LogOut</span>
         </button>
