--- a/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,28 @@
-<p>login-page works!</p>
+<form [formGroup]="formLogin" class="form-container">
+    <mat-card class="popup">
+        <!-- <mat-card-title>Login 2 WorkHandler</mat-card-title> -->
+        <mat-card-content>
+            <div class="icon-container">
+                <div class="example-header-image"></div>
+            </div>
+            <br>
+            <mat-form-field class="email">
+                <mat-label>e-Mail</mat-label>
+                <input formControlName="email" matInput>
+            </mat-form-field>
+    
+            <mat-form-field class="password">
+                <mat-label>Enter your password</mat-label>
+                <input formControlName="password" matInput [type]="hide ? 'password' : 'text'">
+                <!-- <button type="button" matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                  <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button> -->
+            </mat-form-field>
+    
+        </mat-card-content>
+        <mat-card-actions>
+            <button (click)="login()" mat-button color="primary">Login</button>
+          </mat-card-actions>
+    </mat-card>
+</form>
+
