--- a/src/app/modules/cases/pages/cases-page/cases-page.component.html
+++ b/src/app/modules/cases/pages/cases-page/cases-page.component.html
@@ -1,3 +1,4 @@
 <div class="cases-page">
-    <app-case-card [case]="case" *ngFor="let case of cases|caseFilter:'cases'"></app-case-card>
+    <app-case-card [case]="case|normalizeCases" *ngFor="let case of cases"></app-case-card>
+    <!-- <p *ngFor="let dato of datos">{{dato | normalizeCases | json}}</p> -->
 </div>
