--- a/src/app/modules/history/pages/history-page/history-page.component.html
+++ b/src/app/modules/history/pages/history-page/history-page.component.html
@@ -1,3 +1,3 @@
 <div class="history-page">
-    <app-case-card [case]="case" *ngFor="let case of cases|caseFilter:'history'"></app-case-card>
+    <app-case-card [case]="case|normalizeCases" *ngFor="let case of cases"></app-case-card>
 </div>
