--- a/src/app/shared/components/case-card/case-card.component.html
+++ b/src/app/shared/components/case-card/case-card.component.html
@@ -12,12 +12,12 @@
           </mat-menu>
         </li>
         <li>
-          <button (click)="showid()" class="dropdown-button" mat-icon-button>
+          <button (click)="updateCasesMethod({state: !case.state}, case._id, case.state.toString())" class="dropdown-button" mat-icon-button>
             <mat-icon>inventory_2</mat-icon>
           </button>
         </li>
         <li>
-          <button class="dropdown-button" mat-icon-button>
+          <button (click)="updateCasesMethod({state: !case.state}, case._id, case.state.toString())" class="dropdown-button" mat-icon-button>
             <mat-icon>delete_forever</mat-icon>
           </button>
         </li>
