--- a/src/app/shared/components/modals/new-case-modal/new-case-modal.component.html
+++ b/src/app/shared/components/modals/new-case-modal/new-case-modal.component.html
@@ -1,27 +1,28 @@
 <div class="container">
-    <form class="example-form">
+    <form [formGroup]="formLogin" class="example-form">
       <mat-form-field class="example-full-width webex-summary">
         <mat-label>GCI Formatted</mat-label>
+        <!-- <textarea formControlName="GCI" matInput name="webexSummary_list" rows="4" cols="40" placeholder="[+] Mon 24/March - 09:30:10 - Customer removed phones-pt from CSS"></textarea> -->
         <textarea matInput name="webexSummary_list" rows="4" cols="40" placeholder="[+] Mon 24/March - 09:30:10 - Customer removed phones-pt from CSS"></textarea>
       </mat-form-field>
     
       <mat-form-field class="example-full-width">
         <mat-label>Tittle</mat-label>
-        <input matInput type="text" name="Tittle" placeholder="Call Routing Issues">
+        <input formControlName="tittle" matInput type="text" name="Tittle" placeholder="Call Routing Issues">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>SR</mat-label>
-        <input matInput type="text" name="sr" placeholder="697832132">
+        <input formControlName="number" matInput type="text" name="sr" placeholder="697832132">
       </mat-form-field>
       
       <mat-form-field class="example-full-width webex-summary">
         <mat-label>Problem Description</mat-label>
-        <textarea matInput name="problemDescription" rows="4" cols="40" placeholder="Calls cannot be completed as dial, internal calls"></textarea>
+        <textarea formControlName="problem_description" matInput name="problemDescription" rows="4" cols="40" placeholder="Calls cannot be completed as dial, internal calls"></textarea>
       </mat-form-field>
 
       </form>
-    <button class="modal-button" mat-raised-button *ngFor="let button of buttons">
+    <button (click)="sendData()" class="modal-button" mat-raised-button *ngFor="let button of buttons">
       <span>{{button.name}}</span>
       <mat-icon>{{button.icon}}</mat-icon>
     </button>
