Cases can be deleted now

--- a/src/app/modules/cases/pages/cases-page/cases-page.component.html
+++ b/src/app/modules/cases/pages/cases-page/cases-page.component.html
@@ -1,4 +1,3 @@
 <div class="cases-page">
-    <app-case-card (updateCases)="updateCase($event)" [case]="case|normalizeCases" *ngFor="let case of cases"></app-case-card>
-    <!-- <p *ngFor="let dato of datos">{{dato | normalizeCases | json}}</p> -->
+    <app-case-card [case]="case|normalizeCases" *ngFor="let case of cases"></app-case-card>
 </div>
