--- a/src/app/shared/components/case-card/case-card.component.html
+++ b/src/app/shared/components/case-card/case-card.component.html
@@ -1,4 +1,4 @@
-<div class="case-card">
+<div (click)="openModalCaseInfo()" class="case-card">
   <div class="header">
     <div class="options">
       <ul>
